data/derived/fa15/progs/unify/prog0012.ml.out
Characters 11-12:
  let base = 0
             ^
Error: This expression has type int
       This is not a function; it cannot be applied.
